# nim-pimoroni-pico

./: .gitignore  .gitmodules  config.nims  inkyframe.nimble  pimoroni_pico.nimble
csource/: CMakeLists.txt  lwipopts.h  mbedtls_config.h
examples/: CMakeLists.txt  config.nims
examples/badger2040w/: hello.nim
examples/galactic_unicorn/: lightmeter.nim  rainbow.nim  simple.nim
examples/inky_frame/: config.nims  example_inky_frame.nim  sleepy_head.nim  slideshow.nim  slideshow_gphotos.nim  wakeup_config.nim
examples/pico_display/: hello.nim
src/: config.nims  example.nim  inkyframe.nim  pimoroni_pico.nim
src/inkyframe/: pcf85063a.nim  pico_graphics.nim  pimoroni_i2c.nim  uc8159.nim
src/pimoroni_pico/: futhark_gen.nim  futharkgen.nim  futharkgen.nims
src/pimoroni_pico/cmake/: PatchFile.cmake  pico_sdk_crt0.patch  pico_sdk_crt0_startup_overclock.patch  pico_sdk_runtime.patch  pimoroni_pico.cmake
src/pimoroni_pico/common/: pimoroni_bus.nim  pimoroni_common.nim  pimoroni_i2c.nim  vla.nim
src/pimoroni_pico/drivers/: bh1745.nim  bme68x.nim  button.nim  display_driver.nim  display_st7789.nim  eink_ac073tc1a.nim  eink_common.nim  eink_driver.nim  eink_driver_wrapper.nim  eink_uc8151.nim  eink_uc8159.nim  fatfs.nim  pcf85063a.nim  psram_display.nim  psram_display_mock.nim  rgbled.nim  rtc_pcf85063a.nim  sdcard.nim  shiftregister.nim  uc8159.nim  wakeup.nim
src/pimoroni_pico/libraries/: badger2040.nim  badger2040w.nim  bitmap_fonts.nim  bsec2.nim  error_diffusion.nim  galactic_unicorn.nim  hershey_fonts.nim  hershey_fonts_data.nim  inky_frame.nim  inky_frame_mock.nim  jpegdec.nim  pico_display.nim  pico_graphics.nim  shift_register.nim
src/pimoroni_pico/libraries/pico_graphics/: display_driver.nim  drawjpeg.nim  error_diffusion.nim  luts.nim  rgb.nim  shapes.nim
src/pimoroni_pico/pio/: galactic_unicorn.pio
tests/: CMakeLists.txt  config.nims  test1.nim  tgalactic_unicorn.nim  tinkyframe.nim
tests/mock/: config.nims  tinky_frame.nim
tests_mock/: tinkyframe.nim
